Fixed park pictures spacing issue and added flow-text back in

--- a/frontend/materialize/sass/components/_SvgIcons.scss
+++ b/frontend/materialize/sass/components/_SvgIcons.scss
@@ -277,11 +277,21 @@
   margin: auto;
 }
 
-.imgGrid{
+.zeroFacilitiesPadding{
   padding-top:5%;
+  
   @media #{$large-and-up}{
-    padding-top: 10%;
+    padding-top: 15%;
   }
+  @media #{$medium-only} {
+    padding-top:10%;
+  }
+  width:100%;
+  position:relative;
+  display:block;
+}
+
+.imgGrid{
   position: relative;
 }
 
