--- a/frontend/materialize/sass/components/main.scss
+++ b/frontend/materialize/sass/components/main.scss
@@ -228,9 +228,6 @@ div[class*="tt-dataset-"] .tt-suggestion:not(:first-child){
 
 .loaderText {
   font-family:Roboto;
-  font-weight:400;
-  font-size:1rem;
-  line-height:1.2rem;
   color:white;
 }
 
